--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "html-react-parser": "^1.2.6",
+    "json-stable-stringify": "^1.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "rellax": "^1.12.1",
+    "showdown": "^1.9.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
